# robotis_op_cpwalk

./: CMakeLists.txt  CPMEMO.md  README.md  package.xml
launch/: cpwalk_start.launch
script/: cpwalk_ctrl.py  ps3_cpwalk.py
src/: demoWPG_test.cpp  main.cpp  robotis_op_cpwalk.cc  test.cpp
test/: test_cpgen.cpp
vrml/: robotis_op.wrl  robotis_op2-MP_ANKLE2_L-robotis_op2-MP_ANKLE2_L_visual.wrl  robotis_op2-MP_ANKLE2_R-robotis_op2-MP_ANKLE2_R_visual.wrl  robotis_op2-MP_NECK-robotis_op2-MP_NECK_visual.wrl  robotis_op2-MP_PELVIS_L-robotis_op2-MP_PELVIS_L_visual.wrl  robotis_op2-MP_PELVIS_R-robotis_op2-MP_PELVIS_R_visual.wrl  robotis_op2-MP_SHOULDER_R-robotis_op2-MP_SHOULDER_R_visual.wrl  robotis_op2-MP_TIBIA_L-robotis_op2-MP_TIBIA_L_visual.wrl  robotis_op2-MP_TIBIA_R-robotis_op2-MP_TIBIA_R_visual.wrl
